--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "method-override": "^3.0.0",
     "mongoose": "^5.2.14",
     "nodemon": "^1.18.4"
   }
